# mac-llmops

./: README.md  examples.ipynb  pyproject.toml
.github/workflows/: build.yml  release.yml
src/mac_llmops/: __init__.py  _hub.py
