[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-llmops"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["huggingface-hub>=0.27.1", "mlx>=0.21.1"]

[tool.setuptools.dynamic]
version = { attr = "mac_llmops._version.__version__" }
